--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-parallax-tilt": "^1.7.154",
     "react-responsive-carousel": "^3.2.23",
     "react-tilt": "^1.0.2",
+    "tailwindcss": "^3.3.3",
     "three": "^0.154.0",
     "three-stdlib": "^2.23.13"
   },
